2013-11-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (event_buttonrelease): "pause mouse" only worked for
	center and right mouse buttons, not for left mouse.
	Bug #1301

2013-11-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/qt_term.cpp (qt_set_color):  Do not change line type
	just because a color request specifies a linetype color.
	Bugfix.

	* Add a check for valid timer status.  This reduces the number of
	spurious events that are passed through to the main program.

2013-11-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/save.c (save_range):  Due to a typo, the fix/nofix axis property
	was not written out by the "save" command.

2013-10-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/datafile.h (MAXDATACOLS):  (MAXDATACOLS=7) assumed
	that every column in a using spec needs to be stored in the coordinate
	data structure.  But that is no longer true since xticlabel and friends
	take up a using spec column but store their content elsewhere.  Increase
	MAXDATACOLS from 7 to 11 (6 data + 1 variable color + 4 axis ticlabels).
	Bug #1297

2013-10-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/plot3d.c src/misc.c(lp_parse):
	Fix several bugs involving color assignment to contour lines.
	Unfortunately this negates a previous fix that allowed explicit surface
	colors in a hidden3d plot to implicitly do "set hidden3d offset 0".
	Bug #1284 and others.

2013-10-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii df_readmatrix):  If the first field of a
	tab-separated csv file was empty, it would be incorrectly ignored when
	processing that input line.
	Bugfix. 

	* src/wxterminal/wxt_gui.cpp:  Extend toggling active region in key box
	to include enhanced text as well as non-enhanced text.
	Bugfix. 

2013-10-25  Thomas Bleher <tbleher@gmx.de>

	* src/getcolor.c (quantize_gray):  Windows compile error ("small" is not
	accepted as a variable name).
